[project]
name = "maternity-services-statistics-to-cml"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Data Science Skilled team", email = "datascience@nhs.net" }
]
requires-python = ">=3.10,<4"
dependencies = [
    "pyyaml>=6.0.0",
    "cml-schemas>=2.2.0",
    "cml-conversion-helpers>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-html>=3.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
